don't give banners a fixed height
where provider is a long name it spills out of banner
on smaller screens

--- a/stylesheets/beta_common.css
+++ b/stylesheets/beta_common.css
@@ -42,7 +42,6 @@ html[dir="rtl"] .clearlink {
 
 #zero-rated-banner {
 	position: relative;
-	height: 20px;
 	width: 100%;
 	z-index: 99;
 	background: #F4A83D;
@@ -61,7 +60,6 @@ html[dir="rtl"] .clearlink {
 
 #zero-rated-banner-red {
 	position: relative;
-	height: 20px;
 	width: 100%;
 	z-index: 99;
 	background: #FF0000;
