--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -22,7 +22,6 @@ html[dir="rtl"] .clearlink {
 
 #zero-rated-banner {
 	position: relative;
-	height: 20px;
 	width: 100%;
 	z-index: 99;
 	background: #F4A83D;
@@ -41,7 +40,6 @@ html[dir="rtl"] .clearlink {
 
 #zero-rated-banner-red {
 	position: relative;
-	height: 20px;
 	width: 100%;
 	z-index: 99;
 	background: #FF0000;
